Update 'l63babi8d-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:1c48dc4e3db05e3f9056b6aefb9789e70cd8fbb6@sha256:c4201891df7dfad8cddc047a18de53dfc77ab10c4f7ca0d0a2642d9f61c703f9

--- a/components/l63babi8d-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/l63babi8d-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: l63babi8d-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:1c48dc4e3db05e3f9056b6aefb9789e70cd8fbb6@sha256:c4201891df7dfad8cddc047a18de53dfc77ab10c4f7ca0d0a2642d9f61c703f9
+          name: container-image
